hyperstack-macros/tests/ui/map_errors/nested_malformed_map_attribute.rs
use hyperstack_macros::hyperstack;

#[hyperstack]
mod broken {
    #[derive(hyperstack_macros::Stream)]
    struct Nested {
        #[map(source)]
        value: u64,
    }

    struct Root {
        nested: Nested,
    }
}

fn main() {}
